# khaos

./: .env.example  .gitignore  CLAUDE.md  eslint.config.js  eslint.config.ts  index.html  manifest.json  package-lock.json  package.json  schema.sql  supabase_triggers.sql  tailwind.config.js  vite.config.js
api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
api/app/: auth.py  config.py  database.py  exceptions.py  http_client.py  main.py  models.py  moments.py  prompt.py  tools.py  utils.py
api/app/enums/: __init__.py  priority.py  status.py
api/app/providers/: claude.py  deepseek.py  gemini.py
api/app/routers/: chat.py  events.py  fields.py  health.py  moments.py  projects.py  sections.py  sequences.py  tags.py  tasks.py  time_entries.py
api/app/schemas/: __init__.py  chat.py  events.py  fields.py  moments.py  projects.py  sections.py  sequences.py  tags.py  tasks.py  time_entries.py
api/app/services/: chat.py  events.py  fields.py  moments.py  projects.py  sections.py  sequences.py  tags.py  tasks.py  time_entries.py
docs/backlog/: round-1-foundations.md
frontend/: .env.example  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  AppIcon.jsx  ChaoticText.jsx  index.css  main.jsx
src/: App.jsx  App.tsx  index.css  main.jsx  main.tsx
src/hooks/: useChatAgent.js  useChatAgent.ts  useEvents.js  useHierarchy.js  useMomentDetector.js  useMoments.js  useRoutines.js  useSequence.js  useTags.js  useTimeTracking.js
src/lib/: activeEntityContext.jsx  constants.js  constants.ts  (+11 more)
(+94 files in other folders)
